--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Google+Sans+Text:400&text=%E2%86%90%E2%86%92%E2%86%91%E2%86%93&lang=en");
+
 body {
     margin: 0;
     font-family: Arial, sans-serif;
@@ -8,13 +10,11 @@ nav {
     align-items: center;
     justify-content: space-between;
     padding: 10px 50px;
-    background-color: white; 
-    position: sticky; 
+    background-color: white;
+    position: sticky;
     top: 0;
     z-index: 100;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.1); 
 }
-
 
 .nav-logo .logo {
     width: 125px;
@@ -23,7 +23,7 @@ nav {
 
 .nav-links {
     display: flex;
-    gap: 20px; 
+    gap: 20px;
 }
 
 .nav-links a {
@@ -31,7 +31,7 @@ nav {
     font-size: 14.5px;
     font-weight: 600;
     color: black;
-    padding: 7px; 
+    padding: 7px;
     border-radius: 5px;
     transition: background-color 0.3s;
 }
@@ -42,7 +42,7 @@ nav {
 
 .nav-icons {
     display: flex;
-    gap: 15px; 
+    gap: 15px;
 }
 
 .nav-icons img {
@@ -52,11 +52,13 @@ nav {
 }
 
 main {
-    background: url("resources/banner.jpeg") no-repeat center center / cover;
-    min-height: 82.5vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .banner-content {
+    background: url("resources/banner.jpeg") no-repeat center center / cover;
+    height: 68vh;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -71,17 +73,17 @@ main {
 }
 
 .banner-buttons {
-    font-size: 14px;        
-    font-weight: 500;       
-    line-height: 1.2;       
-    text-align: center; 
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: center;
     cursor: pointer;
     transition: background-color 0.2s ease;
 }
 
 .banner-buttons button {
     border: none;
-    border-radius: 6px; 
+    border-radius: 6px;
     padding: 10px 25px;
     height: 40px;
     width: 264px;
@@ -98,43 +100,314 @@ main {
     color: #171a20;
 }
 
-.banner-buttons .btn1:hover {
+.banner-buttons .btn1:hover,
+.card-buttons .btn1:hover,
+.btn1-feat:hover,
+.btn3:hover,
+.energy-buttons .btn1:hover {
     background-color: #335ac4;
     cursor: pointer;
     transition-duration: 0.35s;
 }
 
-.banner-buttons .btn2:hover {
+.banner-buttons .btn2:hover,
+.card-buttons .btn2:hover,
+.btn2-feat:hover,
+.offer-card button:hover,
+.energy-buttons .btn2:hover {
     background-color: #e6e6e6b6;
     cursor: pointer;
     transition-duration: 0.35s;
 }
 
+#card {
+    display: flex;
+    justify-content: flex-start;
+    gap: 17px;
+    margin: 10px;
+    margin-top: 20px;
+}
+
+.card1 {
+    background: url("resources/card-model3.jpg") no-repeat center center / cover;
+}
+
+.card2 {
+    background: url("resources/card-modely.jpg") no-repeat center center / cover;
+}
+
+.card3 {
+    background: url("resources/card-cybertruck.jpg") no-repeat center center / cover;
+}
+
+.card1,
+.card2,
+.card3,
+.energy-card.panels,
+.energy-card.powerwall,
+.energy-card.roof {
+    width: 600px;
+    height: 280px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    background-color: white;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+.card-buttons .btn1,
+.energy-buttons .btn1 {
+    background-color: #3e6ae1;
+    color: white;
+}
+
+.card-buttons .btn2,
+.energy-buttons .btn2 {
+    background-color: white;
+    color: #171a20;
+}
+
+.card-buttons,
+.energy-buttons {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.2;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+    margin-left: -160px;
+    margin-bottom: 20px;
+}
+
+.card h2,
+.energy h2 {
+    color: white;
+    font-size: 30px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+}
+
+.card-buttons button,
+.energy-buttons button {
+    border: none;
+    border-radius: 6px;
+    padding: 10px 25px;
+    height: 40px;
+    width: 60spx;
+    transition: background-color 0.3s ease-out;
+}
+
+.card em {
+    color: white;
+    font-size: 16px;
+    font-weight: 550;
+    margin-left: 20px;
+    margin-bottom: 80px;
+    font-style: normal;
+}
+
+.card1 em,
+.card2 em {
+    margin-bottom: 110px;
+}
+
+.card3 p {
+    margin-top: -5px;
+    font-size: 16px;
+    text-decoration: underline;
+    margin-left: 25px;
+    color: white;
+}
+
+.offers {
+    display: flex;
+    gap: 30px;
+    padding: 40px;
+}
+
+.offer-card {
+    display: flex;
+    background: #fafafa;
+    border-radius: 16px;
+    overflow: hidden;
+    width: 1000px;
+    height: 240px;
+}
+
+/* Left side */
+.offer-text {
+    flex: 1;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.offer-text h2 {
+    font-size: 26px;
+    margin-bottom: 0px;
+}
+
+.offer-text p {
+    font-size: 15px;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+.offer-text button {
+    width: 260px;
+    padding: 10px;
+    border: none;
+    border-radius: 6px;
+    background: white;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+/* Right side */
+.offer-image {
+    width: 35%;
+}
+
+.offer-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.feature-section {
+    display: flex;
+    gap: 24px;
+    padding: 40px;
+    margin-top: -30px;
+}
+
+.feature-card {
+    position: relative;
+    border-radius: 16px;
+    overflow: hidden;
+    height: 460px;
+    cursor: pointer;
+}
+
+.large-card {
+    flex: 2;
+}
+
+.small-card {
+    flex: 1;
+}
+
+.feature-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.feature-content {
+    position: absolute;
+    bottom: 40px;
+    left: 40px;
+    color: white;
+    max-width: 520px;
+}
+
+.feature-content h2 {
+    font-size: 36px;
+    line-height: 1.2;
+    margin-bottom: 20px;
+}
+
+.feature-buttons {
+    display: flex;
+    gap: 12px;
+}
+
+.feature-section button {
+    border: none;
+    transition: background-color 0.3s ease-out;
+}
+
+.btn1-feat, .btn3 {
+    background-color: #3e6ae1;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 20px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.btn2-feat {
+    background-color: white;
+    color: black;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 20px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.energy {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    margin: 10px;
+}
+
+.energy-card.panels {
+    background: url('resources/panels.jpg') no-repeat center center / cover;
+}
+
+.energy-card.powerwall {
+    background: url('resources/powerwall.jpg') no-repeat center center / cover;
+}
+
+.energy-card.roof {
+    background: url('resources/roof.jpg') no-repeat center center / cover;
+}
+
+.energy h2 {
+    margin-left: 15px;
+}
+.energy-content p {
+    color: white;
+    font-size: 14px;
+    margin-left: 15px;
+    margin-bottom: 20px;
+}
+
 footer {
     height: auto;
-    margin-top: -5px;
+    margin-top: 0;
 }
 
 .footer-content {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
     padding: 0px;
-    font-size: 14px;
+    font-size: 12px;
+    font-weight: 540;
+    letter-spacing: 0.3px;
+    line-height: 1.4;
     color: #555;
+    gap: 10px;
+    font-family: "Google Sans Text", "Google Sans", Arial, sans-serif;
+    margin: 8px;
 }
 
-.footer-links {
-    display: flex;
-    gap: 13px;
-}
-
-.footer-links a {
+.footer-content a {
     text-decoration: none;
     color: #555;
 }
 
-.footer-links a:hover {
+.footer-content a:hover {
     text-decoration: underline;
 }
 
@@ -145,20 +418,22 @@ footer {
     right: 30px;
     width: 60px;
     height: 60px;
-    background-color:  #202535;;
+    background-color: #202535;
     border-radius: 50%;
     border: none;
     box-shadow: 0 4px 14px rgba(0, 0, 0, 0.25);
     cursor: pointer;
     z-index: 1000;
-    transition: transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1), background-color 0.3s;
+    transition:
+        transform 0.3s cubic-bezier(0.25, 0.1, 0.25, 1),
+        background-color 0.3s;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .chat-fab-btn:hover {
-    background-color: #070b14;;
+    background-color: #070b14;
     transform: scale(1.1);
 }
 
